--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/tmarkel6849/miniApp-csv-generator#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.16.4",
     "nodemon": "^1.19.0"
   }
